# my_shop

./: .dockerignore  .env.sample  .gitignore  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  workflow.yml
.github/workflows/: workflow.yml
alembic/: env.py
alembic/versions/: 2026-02-18_2247_09_4dc7008e63c9_init.py  2026-02-19_1913_11_34ea4668a767_users.py  2026-02-20_0007_18_a895096be28f_carts.py  98ca137a1b04_init.py  e6e572c33c28_category.py
app/: config.py  health.py  lifespan.py  main.py  models.py  rabbit_consumer.py  rabbit_producer.py
app/cart/: models.py  router.py  schemas.py  service.py
app/category/: models.py  router.py  schemas.py  service.py
app/core/: crud.py  models.py  router.py  schemas.py  session.py
app/kafka/: consume_handlers.py  consumer.py  message.py  producer.py  router.py  schemas.py
app/product/: models.py  router.py  schemas.py  service.py
app/rabbit/: consumer.py  producer.py  router.py
app/user/: models.py
tests/: conftest.py  test_products.py
